<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>
    <string name="pref_stocks_key" translatable="false">stocks</string>
    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>
    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>
    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>
    <string name="action_change_units" translatable="false">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="add_new_stock_button">Add New Stock Button</string>
    <string name="month_3">3 Months</string>
    <string name="see_3_months_history_button">See 3 months history Button</string>
    <string name="months_6">6 Months</string>
    <string name="year">Year</string>
    <string name="see_6_months_history_button">See 6 months history Button</string>
    <string name="see_year_history_button">See year History Button</string>
    <string name="date">Date:</string>
    <string name="close_value">Close Value:</string>
    <string name="history_chart">History Chart</string>
    <string name="loading_status">Loading Status</string>
    <string name="already_exist">Stock %s already exists</string>
    <string name="stock_loaded_successfully">Stock %s loaded successfully</string>
    <string name="not_find_stock">Couldn\'t find %s stock.</string>
    <string name="get_stock">Get %s stock</string>
    <string name="loading">Loading</string>
    <string name="stocks_history">Stocks History</string>
</resources>
