<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    style="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.HistoryActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/cardview_history_margin_vertically"
        android:layout_marginEnd="@dimen/cardview_history_horizontal_margin"
        android:layout_marginStart="@dimen/cardview_history_horizontal_margin"
        android:layout_marginTop="@dimen/cardview_history_margin_vertically"
        android:elevation="@dimen/cardview_elevation"
        card_view:cardCornerRadius="@dimen/cardview_history_corner_raduis">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_history_padding">

            <LinearLayout
                android:id="@+id/lytButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn3M"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/see_3_months_history_button"
                    android:text="@string/month_3" />

                <Button
                    android:id="@+id/btn6M"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/see_6_months_history_button"
                    android:text="@string/months_6" />

                <Button
                    android:id="@+id/btn1Y"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/see_year_history_button"
                    android:text="@string/year" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/history_text_info_padding"
                android:text="@string/date"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblCloseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblDate"
                android:padding="@dimen/history_text_info_padding"
                android:text="@string/close_value"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtCloseValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblDate"
                android:layout_toEndOf="@id/lblCloseValue"
                android:layout_toRightOf="@id/lblCloseValue"
                android:gravity="center"
                android:padding="@dimen/history_text_info_padding"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="2312" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/txtCloseValue"
                android:layout_alignLeft="@id/txtCloseValue"
                android:gravity="center"
                android:padding="@dimen/history_text_info_padding"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="22 Oct 2017" />


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/lytButtons"
                android:layout_below="@id/lblCloseValue"
                android:contentDescription="@string/history_chart" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
